# auto-rfp-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
app/api/: Dockerfile  README.md  pyproject.toml
app/api/src/: __init__.py  main.py
app/api/src/api/: __init__.py  answers.py  audit.py  auth.py  dependencies.py  documents.py  export.py  health.py  projects.py  questions.py
app/api/src/core/: __init__.py  config.py  logging_config.py  security.py
app/api/src/domain/: __init__.py  enums.py  exceptions.py  interfaces.py  schemas.py
app/api/src/infrastructure/: __init__.py
app/api/src/infrastructure/ai/: __init__.py  providers.py
app/api/src/infrastructure/cache/: __init__.py  redis_manager.py  token_cache.py
app/api/src/infrastructure/database/: connection.py  models.py  repositories.py
app/api/src/infrastructure/middleware/: __init__.py  rate_limiter.py  security_headers.py  xss_protection.py
app/api/src/infrastructure/security/: __init__.py  security_monitor.py  session_anomaly_detector.py
app/api/src/services/: answer_pipeline.py  auth_service.py  base_service.py  document_service.py  parsing_service.py  project_service.py  rag_service.py
app/api/src/tests/security/: __init__.py
app/api/src/workers/: __init__.py  celery_app.py  tasks.py
app/api/tests/: __init__.py  conftest.py
app/web/: Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json
app/web/app/: globals.css  layout.tsx  page.tsx
app/web/components/: AppShell.tsx  AuthGuard.tsx  ClientLayout.tsx  DashboardSkeleton.tsx  EmptyState.tsx  ReviewSkeleton.tsx  Sidebar.tsx  ToastContainer.tsx
app/web/contexts/: ToastContext.tsx
init-scripts/: 01-init.sql
(+18 files in other folders)
